[Accessibility] Fix contrast of links

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,7 +4,6 @@
 }
 
 .tag, #tag-cloud > a {
-  color: $grey-color-dark;
   text-decoration: underline;
   padding: 5px;
 }
@@ -14,7 +13,6 @@
 }
 
 .subtitle {
-  color: $grey-color;
   margin-top: $spacing-unit / 8;
   margin-bottom: $spacing-unit;
 }
